fix gap issue

--- a/template/main.css
+++ b/template/main.css
@@ -155,7 +155,6 @@ body {
     padding: 16px 31px;
     display: flex;
     flex-direction: column;
-    gap: 6px;
     box-shadow: 0px 4px 16px #0001;
     justify-content: space-around;
 }
@@ -227,9 +226,9 @@ body {
 
 .level-text-top p {
     font-style: italic;
-font-weight: 400;
-font-size: 35px;
-color: #fffa;
+    font-weight: 400;
+    font-size: 35px;
+    color: #fffa;
 }
 
 .level-text-top p strong {
@@ -246,6 +245,11 @@ color: #fffa;
 .level-inner {
     margin-top: -6px;
 }
+
 .hidden {
     display: none;
+}
+
+.main_top_sidebar_info-rank {
+    margin-top: 6px;
 }
